<resources>
    <string name="app_name">MVVMKotlin</string>
    <string name="google_maps_key">AIzaSyAgQnrGOOtZSSL3CtqeiBTm9t8g5kT4GUA</string>
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="title_activity_booking_history">BookingHistory</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="register">Register</string>
    <string name="email_error">Invalid Email</string>
    <string name="email_empty">Enter Email.</string>
    <string name="password_empty">Enter Password.</string>
    <string name="password_length">Password too small.</string>
    <string name="oops">Oops! Something went wrong.</string>
    <string name="success">Success.</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="gallery_permission">Please provide permission to access Gallery.</string>
    <string name="camera_permission">Please provide permission to access Camera.</string>
    <string name="gallery_permission_title">Storage Permission</string>
    <string name="camera_permission_title">Camera Permission</string>
    <string name="ok">OK</string>
    <string name="no_internet">Sorry! It seems that your not connected to internet.</string>
    <string name="name_error">Enter your name.</string>
    <string name="first_name_error">Enter your first name.</string>
    <string name="last_name_error">Enter your last name.</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="home">Home</string>
    <string name="notificaiton">Notificaiton</string>
    <string name="profile_frag">Profile</string>
    <string name="view_more">More</string>
    <string name="permission_not_granted">Please grant permission.</string>
    <string name="task_is_null">Task is null.</string>
    <string name="enable_location">Please enable location services</string>
    <string name="Firebase_db_user_path">User</string>
    <string name="logout">Logout</string>
    <string name="welcome">Welcome</string>
    <string name="search">Search</string>
    <string name="search_hint">Search</string>
</resources>
