<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item android:id="@+id/home_fragment"
              android:icon="@drawable/ic_home"
              android:title="@string/home"
              android:checked="true"/>
        <item android:id="@+id/profile_fragment"
              android:icon="@drawable/ic_account_disable"
              android:title="@string/profile_frag"
              android:checked="true"/>
        <item android:id="@+id/profile_activity"
              android:icon="@drawable/ic_account_disable"
              android:title="@string/profile_act"
              android:checkable="false"/>
        <item android:id="@+id/logout"
              android:icon="@drawable/ic_logout"
              android:title="@string/logout"
              android:checkable="true"/>
    </group>
</menu>