<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent" android:layout_height="match_parent"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:id="@+id/registerMainConstraint">

    <RelativeLayout
            android:id="@+id/rlProfilePicHolder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginEnd="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_32sdp">


        <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/ivProfilePic"
                android:layout_width="@dimen/_80sdp"
                android:layout_height="@dimen/_80sdp"
                android:layout_marginTop="@dimen/_24sdp"
                android:layout_marginEnd="@dimen/_8sdp"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_centerInParent="true"/>

        <ImageView
                android:id="@+id/ivChoosePic"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_20sdp"
                android:src="@drawable/ic_camera"
                android:layout_alignBottom="@id/ivProfilePic"
                android:layout_alignEnd="@id/ivProfilePic"
                android:tint="@color/colorOnSecondaryDark"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:focusable="true"/>
    </RelativeLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutFirstName"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/first_name"
            app:boxStrokeColor="@color/colorOnSecondary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginEnd="@dimen/_8sdp"
            app:hintTextColor="@color/colorOnSecondaryDark"
            app:layout_constraintTop_toBottomOf="@+id/rlProfilePicHolder"
            android:layout_marginTop="@dimen/_24sdp">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:imeOptions="actionNext"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/last_name"
            app:boxStrokeColor="@color/colorOnSecondary"
            android:layout_marginTop="@dimen/_8sdp"
            android:id="@+id/textInputLayoutLastName"
            app:hintTextColor="@color/colorOnSecondaryDark"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayoutFirstName"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="@dimen/_8sdp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="@dimen/_8sdp">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:imeOptions="actionNext"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            app:boxStrokeColor="@color/colorOnSecondary"
            android:layout_marginTop="@dimen/_8sdp"
            android:id="@+id/textInputLayoutEmail"
            app:hintTextColor="@color/colorOnSecondaryDark"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayoutLastName"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="@dimen/_8sdp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="@dimen/_8sdp">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:imeOptions="actionNext"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutPassword"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            app:boxStrokeColor="@color/colorOnSecondary"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginEnd="@dimen/_8sdp"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayoutEmail"
            android:layout_marginTop="@dimen/_8sdp"
            app:hintTextColor="@color/colorOnSecondaryDark"
            app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:imeOptions="actionDone"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
            android:id="@+id/btnRegister"
            style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:layout_marginEnd="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_8sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayoutPassword"
            android:backgroundTint="@color/colorOnSecondaryDark"/>

    <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/animation_view"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_100sdp"
            app:lottie_rawRes="@raw/loading"
            app:lottie_loop="true"
            app:lottie_autoPlay="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:visibility="gone"/>
</androidx.constraintlayout.widget.ConstraintLayout>